pmd fixes
Former-commit-id: ade0272012f815d40f0e645fb2e0757cbb4a16ed